[gd_scene load_steps=11 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 96
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 64
font_data = ExtResource( 2 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.67017
margin_right = 1.67017
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="Timer" type="Timer" parent="."]

[node name="CountdownNmb" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = -127.5
margin_right = 28.0
margin_bottom = -42.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "3"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownTxt" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = -5.5
margin_right = 196.0
margin_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "READY.."
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -6.0
margin_top = -10.0
margin_right = 6.0
margin_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinningPlayer" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.67
margin_top = -28.5
margin_right = 112.33
margin_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 8 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_Button_pressed"]
